--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,6 +27,30 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
+  <h3>The fields below need to be filled in order to trade books:</h3>
+
+  <div class="field">
+    <%= f.label :real_name %> 
+    <%= f.text_field :real_name %>
+  </div>
+    <div class="field">
+    <%= f.label :street %> 
+    <%= f.text_field :street %>
+  </div>
+    <div class="field">
+    <%= f.label :city %> 
+    <%= f.text_field :city %>
+  </div>
+    <div class="field">
+    <%= f.label :state %> 
+    <%= f.text_field :state %>
+  </div>
+    <div class="field">
+    <%= f.label :zipcode %> 
+    <%= f.text_field :zipcode %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
@@ -37,3 +61,9 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+
+      t.string :real_name
+      t.string :street
+      t.string :city
+      t.string :state
+      t.string :zipcode
