--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% @books.each do |book| %>
+<h3><%= book.title %></h3>
+<p>Author: <%= book.author_last_name %>, <%= book.author_first_name %></p>
+<p>ISBN: <%= book.isbn %></p>
+<p>Condition: <%= book.condition %></p>
+<p>Description: <%= book.description %></p>
+<% end %>
+
+
+
