--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <%= link_to "Sign out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
   <% else %>
     <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-    <%= link_to "Sign in", new_user_session_path, :class => 'navbar-link'  %>
-    <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, :class => 'navbar-link'  %>
+    <%= link_to "Sign in", new_user_session_path, :class => 'navbar-link'  %> |
+    <%= link_to image_tag('fb-favicon.ico'), user_facebook_omniauth_authorize_path, :class => 'navbar-link' %>
   <% end %>
 
     <%= csrf_meta_tags %>
