--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,8 @@
   <nav class="logged_in_nav">
         <ul>
           <li> <%= link_to "Browse All Books", books_path %> </li>
-          <li> <%= link_to "See My Books", user_books_path %> </li>
-          <li> <%= link_to "See My Trades", user_books_path %> </li>
-          <li> <%= link_to "See My Messages", user_books__path %> </li>
+          <li> <%= link_to "See My Books", user_books_path(current_user.id) %> </li>
+          <li> <%= link_to "See My Trades", trades_path %> </li>
       </ul>
   </nav>
 <% end %>
