--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome ... Home!!!</h1>
-<% if logged_in? %>
+<% if current_user %>
   <h2>You crazy kid, <%= current_user.email %> !!! </h2>
 <% end %>
