--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,28 +30,28 @@
   <h3>The fields below need to be filled in order to trade books:</h3>
 
   <div class="field">
-    <%= f.label :real_name %> 
+    <%= f.label :real_name %><br /> 
     <%= f.text_field :real_name %>
   </div>
     <div class="field">
-    <%= f.label :street %> 
+    <%= f.label :street %><br /> 
     <%= f.text_field :street %>
   </div>
     <div class="field">
-    <%= f.label :city %> 
+    <%= f.label :city %><br /> 
     <%= f.text_field :city %>
   </div>
     <div class="field">
-    <%= f.label :state %> 
+    <%= f.label :state %><br /> 
     <%= f.text_field :state %>
   </div>
     <div class="field">
-    <%= f.label :zipcode %> 
+    <%= f.label :zipcode %><br /> 
     <%= f.text_field :zipcode %>
   </div>
 
 
-  <div class="actions">
+  <div class="actions"><br />
     <%= f.submit "Update" %>
   </div>
 <% end %>
@@ -62,8 +62,4 @@
 
 <%= link_to "Back", :back %>
 
-      t.string :real_name
-      t.string :street
-      t.string :city
-      t.string :state
-      t.string :zipcode
+ 
