--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,31 +1,58 @@
+<i>All fields but 'title' are optional, but the more fields added, the better the chance of trading a book</i><br />
+
 <%= form_for ([@user, @book ]) do |f|  %>
 
-  <%= f.label :title  %>
-  <%= f.text_field :title %><br />
+  <div class="field">
+    <%= f.label :title  %><br />
+    <%= f.text_field :title %>
+  </div>  
 
-  <%= f.label :author_last_name %>
-  <%= f.text_field :author_last_name %><br />
+  <div class="field">
+    <%= f.label :author_last_name %><br />
+    <%= f.text_field :author_last_name %>
+  </div>
 
-  <%= f.label :author_first_name %>
-  <%= f.text_field :author_first_name %><br />
+  <div class="field">
+    <%= f.label :author_first_name %><br />
+    <%= f.text_field :author_first_name %>
+  </div>
 
-  <%= f.label :isbn %>
-  <%= f.text_field :isbn %><br />
+  <div class="field">
+    <%= f.label :ISBN %><br />
+    <%= f.text_field :isbn %>
+  </div>
 
+  <div class="radio_field">
+    <p><strong>Condition</strong></p>
+    <%= f.label :condition, 'Like New', :value => 'Like new' %>
+    <%= f.radio_button :condition, "Like New" %><br />
+    <%= f.label :condition, 'Good', :value => 'Good' %>
+    <%= f.radio_button :condition, "Good" %><br />
+    <%= f.label :condition, 'Fair', :value => 'Fair' %>
+    <%= f.radio_button :condition, "Fair" %><br />
+  </div>
 
-  <%= f.label "Condition" %><br />
-  Like New <%= f.radio_button :condition, "Like New" %><br />
-  Good <%= f.radio_button :condition, "Good" %><br />
-  Fair <%= f.radio_button :condition, "Fair" %><br />
+  <div class="text_area">
+    <%= f.label :description%><br />
+    <%= f.text_area :description %>
+  </div>
 
-  <%= f.label :description%><br />
-  <%= f.text_area :description %><br />
-
+  <div class="checkboxes">
   Genre(s): <%= f.collection_check_boxes :genre_ids, Genre.all, :id, :name %>
-  <%= f.fields_for :genres, @book.genres.build do |genres_fields| %><br />
+  </div>
+
+  <div class="field">
+    <%= f.fields_for :genres, @book.genres.build do |genres_fields| %><br />
+  </div>
+
+  <div class="field">
     Add a Genre: <%= genres_fields.text_field :name %><br />
   <% end %><br />
-  <%= f.submit %>
+  </div>
+
+  <div class="submit">
+    <%= f.submit %><br />
+  </div>
   
 <% end %>
 
