--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Welcome ... Home!!!</h1>
+
 <% if current_user %>
-  <h2>You crazy kid, <%= current_user.email %> !!! </h2>
+  <h2>Hey, <%= current_user.first_name %> ! </h2>
 <% end %>
+
+<div class="center jumbotron">
+  <h1>Welcome to LibbyLibby!</h1>
+
+
+
+
