--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,18 @@
-<% if @user %>
-  <h2><%= @user.first_name %>'s Books</h2>
+<% if @user && @user == current_user %>
   <p><%= button_to "Add a New Book", new_user_book_path(@user), :method => 'get' %><p>
+<% elsif @user %>  
+  <h2><%= @user.first_name %>'s Books</h2>
 <% else %>
   <h2>All The Books</h2>
 <% end %>
 
 
 <% @books.each do |book| %>
-<% if book.status != "traded" %>
 <h3><img src="http://covers.openlibrary.org/b/isbn/0385472579-M.jpg"  alt="Book Cover"  style="width:43px;height:60px;"> 
   <%= book.title %></h3>
   <p>Author: <%= book.author_last_name %>, <%= book.author_first_name %></p>
   <%= link_to "Learn More", user_book_path(book.user, book) %><br>
   <hr>
-  <% end %>
 <% end %>
 
 
