updated user show/index views for admin

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <% if @user && @user == current_user %>
-  <p><%= button_to "Add a New Book", new_user_book_path(@user), :method => 'get' %><p>
+  <p><%= button_to "Add a New Book", new_user_book_path(@user), :method => 'get' %><p><br />
 <% elsif @user %>  
   <h2><%= @user.first_name %>'s Books</h2>
 <% else %>
@@ -8,11 +8,13 @@
 
 
 <% @books.each do |book| %>
-<h3><img src="http://covers.openlibrary.org/b/isbn/0385472579-M.jpg"  alt="Book Cover"  style="width:43px;height:60px;"> 
-  <%= book.title %></h3>
+<% unless book.status == "traded" %> 
+<img src="http://covers.openlibrary.org/b/isbn/0385472579-M.jpg"  alt="Book Cover"  style="width:43px;height:60px;">
+  <h3><%= book.title %></h3>
   <p>Author: <%= book.author_last_name %>, <%= book.author_first_name %></p>
   <%= link_to "Learn More", user_book_path(book.user, book) %><br>
   <hr>
+  <% end %>
 <% end %>
 
 
