--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,6 @@
-Huzzah!!!!
+<h1>All of LibbyLibby's Users:</h1>
+<% @users.each do |user| %>
+  <%= user.email %><br />
+  <%= link_to "See More", user_path(user) %><br />
+  <p><%= button_to "Delete This account", registration_path(:user, as: :accounts), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<% end %>
