--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,49 +1,57 @@
-<img src="http://covers.openlibrary.org/b/isbn/0385472579-M.jpg"  alt="Book Cover"  style="width:178px;height:255px;"> 
+<% if @book.status == "at_home" %>
 
-<h2>Title: <%= @book.title %></h2>
-<h3>Author: <%= @book.author_last_name %>, <%= @book.author_first_name %></h3>
+  <img src="http://covers.openlibrary.org/b/isbn/0385472579-M.jpg"  alt="Book Cover"  style="width:178px;height:255px;"> 
 
-<h3>Genre(s):</h3>
-<% @book.genres.each do |genre| %>
-  <h3><%= genre.name %></h3>
-<% end %>
+  <h2>Title: <%= @book.title %></h2>
+  <h3>Author: <%= @book.author_last_name %>, <%= @book.author_first_name %></h3>
 
-<h3>ISBN: <%= @book.isbn %></h3>
-<h3>Condition: <%= @book.condition %></h3>
-<h3>Description:</h3>
-<h3><%= @book.description%></h3>
-<hr>
+  <h3>Genre(s):</h3>
+  <% @book.genres.each do |genre| %>
+    <h3><%= genre.name %></h3>
+  <% end %>
 
-<% if @book.user == current_user %>
-  <h2>Your Current Rating: <%= @book.user.user_rating %></h2>
-  <%= link_to 'Edit Book', edit_user_book_path(@user, @book), class: "btn btn-primary" %><br />
-  <%= button_to 'Delete Book', user_book_path(@user, @book), 
-  data: {:confirm => 'Are you sure?'}, :method => :delete, class: "btn btn-primary" %>
+  <h3>ISBN: <%= @book.isbn %></h3>
+  <h3>Condition: <%= @book.condition %></h3>
+  <h3>Description:</h3>
+  <h3><%= @book.description%></h3>
+  <hr>
 
-<% else %>
+  <% if @book.user == current_user %>
+    <h2>Your Current Rating: <%= @book.user.user_rating(@book.user) %>  </h2>
+    <%= link_to 'Edit Book', edit_user_book_path(@user, @book), class: "btn btn-primary" %><br /><br />
+    
+    <%= button_to 'Delete Book', user_book_path(@user, @book), 
+    data: {:confirm => 'Are you sure?'}, :method => :delete, class: "btn btn-primary" %>
 
-  <h3>Book Owner Email: <%= @book.user.email %></h3>
-  <h3>Book Owner Rating: <%= @book.user.user_rating %></h3>
+  <% else %>
 
-<% end %>  
+    <h2>Book Owner Email: <%= @book.user.email %></h2>
 
-<% if @new_trade %>
+    <h2>Owner's Current Rating: <%= @book.user.user_rating(@book.user) %> </h2>
 
-  <%= form_for @new_trade do |f| %>
-    <%= f.hidden_field :initial_book_id, value: @book.id %>
-    <%= f.hidden_field :owner_id, value: @book.user.id %>
-    <%= f.hidden_field :requester_id, value: current_user.id %>
-    <%= f.submit 'Request a Trade' %>
+  <% end %>  
+
+  <% if @new_trade && @book.user != current_user %>
+
+    <%= form_for @new_trade do |f| %>
+      <%= f.hidden_field :initial_book_id, value: @book.id %>
+      <%= f.hidden_field :owner_id, value: @book.user.id %>
+      <%= f.hidden_field :requester_id, value: current_user.id %>
+      <%= f.submit 'Request a Trade' %>
+    <% end %> 
+
+  <% elsif @shared_trade && @book.user != current_user %>
+
+    <%= form_for @shared_trade do |f| %>
+      <%= f.hidden_field :matched_book_id, value: @book.id %>
+      <%= f.submit 'Complete a Trade' %>
+    <% end %> 
+
   <% end %> 
+<% end %> 
 
-<% elsif @shared_trade %>
 
-  <%= form_for @shared_trade do |f| %>
-    <%= f.hidden_field :matched_book_id, value: @book.id %>
-    <%= f.submit 'Complete a Trade' %>
-  <% end %> 
 
-<% end %>   
 
 
 
