--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,10 @@
+<% if current_user && current_user.admin? %>
+  <h2>ADMIN</h2>
+  <ul>
+    <li><%= link_to "View/Delete Users", users_path %> </li>
+  </ul>
+<% end %>
+
 <% if current_user %>
   <nav class="logged_in_nav">
         <ul>
