--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -3,84 +3,101 @@
 
 <h2>Trades Awaiting Your Response:</h2>
 
-<% if !@user_trades.empty? %>
-  <% @user_trades.each do |trade| %>
+<% if @trades_user_received.empty? %>
+<p>You currently have no pending trades to respond to</p> 
+<% else %>
+  <% @trades_user_received.each do |trade| %>
+    <p><a href="mailto:<%= trade.requester.email %>?subject=LibbyLibby Trade">
+    <%= trade.requester.email %></a> requested <%= trade.initial_book.title %> from you on <%= trade.created_at.strftime("%b %d %Y") %>, and he/she is still waiting for your response/trade</p>
 
-    <% if trade.owner_id == @user.id && trade.status == "pending" %>
-      <a href="mailto:<%= trade.requester %>?subject=LibbyLibby Trade">
-      Send Email</a>   <p><a href="mailto:<%= trade.requester.email %>?subject=LibbyLibby Trade">
-      <%= trade.requester.email %></a> requested <%= trade.initial_book.title %> from you at <%= trade created_at.strftime("%b %d %Y") %>, and he/she is still waiting for your response/trade</p>
-
-      <p><%= button_to "See User's Books", user_books_path %></p>
-      <p><%= button_to "Delete/Refuse Trade", trade_path(trade), data: {confirm: "Are you sure?" }, method: :delete %></p>
-
-    <% else %>
-       <p>You don't currently have any pending trades</p>
-    <% end %> 
+    <p><%= link_to "See User's Books", user_books_path(trade.requester.id), class: "btn btn-primary" %></p>
+    <p><%= button_to "Delete/Refuse Trade", trade_path(trade), data: {confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary" %></p>
   <% end %>
-
-<% else %> 
-  <p>You don't currently have any pending trades</p>
 <% end %>
 
 
 <h2>Trades You Requested Which Aren't Complete:</h2>
 
-<% if !@user_trades.empty? %>
-  <% @user_trades.each do |trade| %>
-
-    <% if trade.requester_id == @user.id && trade.status == "pending" %>
+<% if @trades_user_requested.empty? %>
+<p>You currently have no pending requested trades</p> 
+<% else %>
+  <% @trades_user_requested.each do |trade| %>
       <p>You requested <%= trade.initial_book.title %> from <a href="mailto:<%= trade.owner.email %>?subject=LibbyLibby Trade"><%= trade.owner.email %></a> on <%= trade.created_at.strftime("%b %d %Y") %> and you're still waiting for a response </p>
 
       <p><%= button_to "Delete/Cancel Trade", trade_path(trade), data: {confirm: "Are you sure?" }, method: :delete %></p>
-
-    <% else %>
-      <p>You don't currently have any requested trades</p>
-    <% end %>
-  <% end %>
-
-<% else %>
-  <p>You don't currently have any requested trades</p>
+   <% end %>
 <% end %>
-
-
 
 <h2>Completed Trades:</h2>
 
-<% if !@user_trades.empty? %>
-  <% @user_trades.each do |trade| %>
+<% if !@trades_user_completed.empty? %>
+  <% @trades_user_completed.each do |trade| %>
+    <p><%= trade.requester.email %> requested <strong><%= trade.initial_book.title %></strong> from you, and you traded <%= trade.matched_book.title %> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p>
 
-    <% if trade.owner_id == @user.id && trade.status == "complete" %>
-      <p><%= trade.requester %> requested <%= trade.initial_book.title %> from you, and you traded <%= trade.matched_book.title %> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p>
+      <% if trade.matched_book_owner_rating.nil? %>
+        <% @trade = trade %>
+        <p>When you (ideally) receive your book, feel free to rate the shipper:</p>
 
-      <p><strong>Be sure to mail <%= trade.initial_book.title %> to:</strong></p>
-      <p><%= trade.initial_book.user.real_name %></p>
-      <p><%= trade.initial_book.user.address %></p>
-      <p><%= trade.initial_book.user.city %></p>
-      <p><%= trade.initial_book.user.state %></p>
-      <p><%= trade.initial_book.user.zipcode %></p>
+       <%= form_for @trade, url: trade_path(@trade) do |f| %>
 
+          <b>Rating</b><br />
+          <%= f.radio_button :matched_book_owner_rating, '3' %> The book arrived in a reasonable amount of time and as described<br />
+          <%= f.radio_button :matched_book_owner_rating, '2' %> There were some problems which were eventually resolved<br />
+          <%= f.radio_button :matched_book_owner_rating, '1' %> The book never arrived/was in awful condition<br />
 
-    <% elsif trade.requester_id == @user.id && trade.status == "complete" %>
+           <%= f.submit 'Rate this Reader' %><br />
+
+      <% end %>
+    <% end %>
+
+    <p><strong>Be sure to mail <%= trade.initial_book.title %> to:</strong></p>
+
+      <%= trade.matched_book.user.real_name %><br />
+      <%= trade.matched_book.user.street %><br />
+      <%= trade.matched_book.user.city %><br />
+      <%= trade.matched_book.user.state %><br />
+      <%= trade.matched_book.user.zipcode %><br />
+
+  <% end %>
+<% end %>  
+
+<% if !@trades_completed_by_other.empty? %>
+  <% @trades_completed_by_other.each do |trade| %>
+
       <p>You requested <%= trade.initial_book.title %> from <% trade.owner %>, and he/she traded <%= trade.matched_book.title %> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p>
+      <% if trade.initial_book_owner_rating.nil? %>
+
+        <p>When you (ideally) receive your book, feel free to rate the shipper:</p>
+
+        <%= form_for trade do |f| %>
+
+          <b>Rating</b><br />
+          <%= f.radio_button :initial_book_owner_rating, '3' %> The book arrived in a reasonable amount of time and as described<br />
+          <%= f.radio_button :initial_book_owner_rating, '2' %> There were some problems which were eventually resolved<br />
+          <%= f.radio_button :initial_book_owner_rating, '1' %> The book never arrived/was in awful condition<br />
+
+          <%= f.submit 'Rate this Reader' %><br />
+
+      <% end %>
+    <% end %>
+
 
       <p>Be sure to mail <%= trade.matched_book.title %> to:</p>
-      <p><%= trade.matched_book.user.real_name %></p>
-      <p><%= trade.matched_book.user.address %></p>
-      <p><%= trade.matched_book.user.city %></p>
-      <p><%= trade.matched_book.user.state %></p>
-      <p><%= trade.matched_book.user.zipcode %></p>
 
-      <!-- add option for user review here (review create path, post with params from checklist )-->
+      <%= trade.initial_book.user.real_name %><br />
+      <%= trade.initial_book.user.street %><br />
+      <%= trade.initial_book.user.city %><br />
+      <%= trade.initial_book.user.state %><br />
+      <%= trade.initial_book.user.zipcode %><br />
 
-    <% else %>
-    <p>You don't currently have any completed trades</p>
-    <% end %>
+
   <% end %>
-  
-<% else %>
-  <p>You don't currently have any completed trades</p>
-<% end %>  
+<% end %> 
+
+<% if @trades_completed_by_other.empty? && @trades_user_completed.empty? %>
+  <p>You currently have no completed trades</p>    
+<% end %>
+
 
 
 
