--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,42 @@
-<h1>Your Profile Page</h1>
-<% if @user.admin? %>
-<h2>ADMIN</h2>
-<% end %>
+<% if current_user.admin? && current_user != @user %>
 
-<p><i>Remember, if any of the fields below are blank, you must update them to add or trade books</i><p>
-<p>Your Real Name: <%= @user.real_name %></p>
-<p>Your Street Address: <%= @user.street %></p>
-<p>Your City: <%= @user.city %></p>
-<p>Your State: <%= @user.state %></p>
-<p>Your Zipcode: <%= @user.zipcode %></p>
-<p>Your email: <%= @user.email %></p>
-<p>Your Current Rating: <strong><%= @user.user_rating %></strong></p>
+<h1> User's Profile </h1>
 
+  <p>User's Real Name: <%= @user.real_name %></p>
+  <p>User's Street Address: <%= @user.street %></p>
+  <p>User's City: <%= @user.city %></p>
+  <p>User's State: <%= @user.state %></p>
+  <p>User's Zipcode: <%= @user.zipcode %></p>
+  <p>User's email: <%= @user.email %></p>
+  <p>User's Current Rating: <strong><%= @rating %></strong></p>
+
+  <p><%= button_to "Delete This account", registration_path(:user, as: :accounts), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<% elsif current_user == @user %>
+
+
+<h1>Your Profile </h1>
+
+
+  <p><i>Remember, if any of the fields below are blank, you must update them to add or trade books</i><p>
+  <p><strong>Your Real Name: </strong><%= @user.real_name %></p>
+  <p><strong>Your Street Address: </strong><%= @user.street %></p>
+  <p><strong>Your City: </strong><%= @user.city %></p>
+  <p><strong>Your State: </strong><%= @user.state %></p>
+  <p><strong>Your Zipcode: </strong><%= @user.zipcode %></p>
+  <p><strong>Your email: </strong><%= @user.email %></p>
+  <p><strong>Your Current Rating: <strong><%= @rating %></strong></p>
 
 <hr>
 
 <p><%= button_to "Change My Password", edit_user_registration_path(@user), :method => 'get' %></p>
 
 <p><%= button_to "Edit My Shipping Details", edit_user_path(@user), :method => 'get' %></p>
+
+<p><%= button_to "Delete My account", registration_path(:user, as: :accounts), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+<% end %>
+
+
 
 
