--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,10 @@
 <% if current_user && current_user.admin? %>
+<nav class="admin_nav">
   <h2>ADMIN</h2>
   <ul>
     <li><%= link_to "View/Delete Users", users_path %> </li>
   </ul>
+  <hr>
 <% end %>
 
 <% if current_user %>
