--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,3 +51,25 @@ body {
     box-shadow: 0 3px 6px rgba(0,0,0,0.9);
 }
 
+.submit {
+    padding: 14px 24px;
+    border: 0 none;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    background: #0099cc;
+    color: #ffffff;
+}
+
+
+img[src=""] {
+    display: none;
+}
+
+.boxframe {
+  background-color: Azure;
+  border: 10px solid #74cef1; 
+  padding: 20px;
+  margin: 20px; 
+}
+
