--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,24 @@ body {
   padding: 50px;
 }
 
+input[type='checkbox'] {
+   margin-left: 20px;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #008B8B;
+    margin: 1em 0;
+    padding: 0; 
+}
+
+img {
+    border-radius: 3px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.9); 
+}
+
 .theme-dropdown .dropdown-menu {
   position: static;
   display: block;
@@ -51,16 +69,6 @@ body {
     box-shadow: 0 3px 6px rgba(0,0,0,0.9);
 }
 
-.submit {
-    padding: 14px 24px;
-    border: 0 none;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    background: #0099cc;
-    color: #ffffff;
-}
-
 
 img[src=""] {
     display: none;
@@ -72,4 +80,26 @@ img[src=""] {
   padding: 20px;
   margin: 20px; 
 }
+
+.boxframe-title {
+    text: 200%;
+}
+
+.boxframe-subj {
+    font-weight: bold;
+    margin-left: 10px;  
+}
+
+
+.boxframe-desc {
+    font-weight: normal;
+    margin-left: 20px; 
+}
+
+
+
+
+
+
+
 
