--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
 
 <% if current_user %>
-  <h2>Hey, <%= current_user.first_name %> !  Welcome back!</h2>
+  <h2><%= current_user.first_name %>'s Homepage!</h2>
 <% else %>
   <div class="page-header">
-    <h1>Welcome to LibbyLibby!<small> LibbyLibby is a simple site for listing and trading books.  Simply add some books, complete your shipping info, and browse the site to find books you like.  If you like a book, suggest a trade; others can then trade for a book from your list or reject the trade.  If you both agree to trade, ship the selected title to the other person in a timely fashion via USPS media mail --- usually $3-5 --- and they'll do the same for you (unless they're bad neighbors!). And if things don't work out --- the book doesn't come, or it's in awful condition, for example --- you can rate the shipper!<br />Happy reading, happy trading!</small></h1>
+    <h1>Welcome to libbylibby! <small> Libbylibby is a site for listing and trading books.  Simply add some books, complete your shipping info, and browse the site to find books you like.  If you like a book, suggest a trade; others can then trade for a book from your list or reject the trade.  If you both agree to trade, ship the selected title to the other person in a timely fashion via USPS media mail --- usually $3-5 --- and they'll do the same for you (unless they're bad neighbors!). And if things don't work out --- the book doesn't come, or it's in awful condition, for example --- you can rate the shipper!<br /><hr>Happy reading, happy trading!</small></h1>
   </div> 
 <% end %> 
 
