reverted to old trade index action

--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,4 +1,4 @@
-@user_trades.sort { |a,b| a.requester_id <=> b.requester.id }
+<!-- @user_trades.sort { |a,b| a.requester_id <=> b.requester.id } -->
  
 <h1>Your Trades</h1>
 
