added scope and styles to welcome page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,6 +54,17 @@ img {
   margin: 5px 0;
 }
 
+.book-listing {
+  padding: 20px;
+  color: gray;
+  background-color: SkyBlue;
+}
+
+.book-listing img {
+  margin: 30px 10px 10px 20px;
+
+}
+
 .wrapper {
     width: 100%;
     overflow: hidden;
