--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.book-listing {
+  padding: 20px;
+  color: SlateGray;
+  background-color: SkyBlue;
+}
+
+.book-listing img {
+  margin: 30px 10px 10px 20px;
+}
