--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -41,14 +41,14 @@
         <%= f.hidden_field :initial_book_id, value: @book.id %>
         <%= f.hidden_field :owner_id, value: @book.user.id %>
         <%= f.hidden_field :requester_id, value: current_user.id %>
-        <%= f.submit 'Request a Trade' %>
+        <%= f.submit 'Request a Trade', :class => 'btn btn-primary' %>
       <% end %> 
 
     <% elsif @shared_trade && @book.user != current_user %>
 
       <%= form_for @shared_trade do |f| %>
         <%= f.hidden_field :matched_book_id, value: @book.id %>
-        <%= f.submit 'Complete a Trade' %>
+        <%= f.submit 'Complete a Trade', :class => 'btn btn-primary' %>
       <% end %> 
 
     <% end %> 
