--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,45 +1,43 @@
-<h1>Edit Shipping Info</h1>
-<% if @user.role == "admin" %>
-<h2>ADMIN</h2>
-<% end %>
+<div class="boxframe">
+  <h2>Edit Shipping Info</h2>
 
+  <p><i>Remember, if any of the fields below are blank, you must update them to add or trade books</i><p>
 
-<p><i>Remember, if any of the fields below are blank, you must update them to add or trade books</i><p>
+  <%= form_for @user do |f| %>
+    <div class="field" >
+      <%= f.label :real_name %><br />
+      <%= f.text_field :real_name %>
+    </div> 
 
-<%= form_for @user do |f| %>
-  <div class="field" >
-    <%= f.label :real_name %><br />
-    <%= f.text_field :real_name %>
-  </div> 
+    <div class="field" > 
+      <%= f.label :street %><br /> 
+      <%= f.text_field :street %>
+    </div> 
 
-  <div class="field" > 
-    <%= f.label :street %><br /> 
-    <%= f.text_field :street %>
-  </div> 
+    <div class="field" >
+      <%= f.label :city %><br />
+      <%= f.text_field :city %>
+    </div> 
 
-  <div class="field" >
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div> 
+    <div class="field" >
+      <%= f.label :state %><br />
+      <%= f.text_field :state %>
+    </div> 
 
-  <div class="field" >
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </div> 
+    <div class="field" >
+      <%= f.label :zipcode %><br />
+      <%= f.text_field :zipcode %><br />
+    </div> 
 
-  <div class="field" >
-    <%= f.label :zipcode %><br />
-    <%= f.text_field :zipcode %><br />
-  </div> 
+    <div class="dropdown" >
+      <%= f.label :role %><br />
 
-  <div class="dropdown" >
-    <%= f.label :role %><br />
+    <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) %>
+    </div><br />
 
-  <%= f.select(:role, User.roles.keys.map {|role| [role.titleize,role]}) %>
-  </div>
+    <div class="actions">
+      <%= f.submit "Update Info" %>
+    </div>
 
-  <div class="actions"><br />
-    <%= f.submit "Update Info" %>
-  </div>
-
+</div>
 <% end %>
